@@ -1,12 +1,23 @@
 ﻿[![CircleCI](https://circleci.com/gh/cristianomg/LojaDepartamento.svg?style=svg)](https://circleci.com/gh/cristianomg/LojaDepartamento)
 
 # Projeto-de-programcão
+
 Estudo de Caso – Loja Departamento
 
-<p>O estudo de caso consiste em uma loja de departamentos onde cada produto está ligado a um departamento, assim como os 
-funcionarios estão ligados a um departamento.</p> 
-<p>Cada produto so pode ser vendido por funcionarios do mesmo departamento do produto.</p> 
+<p>O estudo de caso consiste em uma loja de departamentos onde cada produto está ligado a um departamento, assim como os
+funcionarios estão ligados a um departamento.</p>
+<p>Cada produto so pode ser vendido por funcionarios do mesmo departamento do produto.</p>
 <p>Os produtos e funcionarios podem ser deslocados de um departamento para outro</p>
 <p>O projeto precisa contem todas as classes sugeridas no documento do projeto, devem ser feitos testes unitarios assim utilização de uma plataforma de testes automatizados</p>
 
+## Executando o programa
 
+* Utilize o Eclipse
+
+* Primeiramente baixe as dependencias do javafx (SDK para o windows) no site <https://gluonhq.com/products/javafx/>
+
+* Insira as dependencias no modulePath  ; buildPath - configure Build Path - libraries - add External Jars
+
+* Insira o seguinte comando **--add-modules=javafx.fxml,javafx.controls**  no VM Arguments  ; run configuration - Arguments - VM Arguments
+
+* Execute o programa no run do eclipse 
